refactor tsconfig.app and tsconfig.node into single tsconfig.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "clean": "rm -rf dist/",
     "lint": "eslint .",
     "prettier": "npx prettier . --write",
     "preview": "vite preview"
