--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "erasableSyntaxOnly": true,
     "noEmit": true
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src", "vite.config.ts"]
 }
