refactor: use @/ style paths, update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "erasableSyntaxOnly": true,
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["src", "vite.config.ts"]
 }
