--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "jsxSingleQuote": false,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "test": true
 }
