chore: set up github workflow and PR template

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+# Visual crossing weather API - 1000 free queries per day
 # https://www.visualcrossing.com/weather-api/
 VITE_API_KEY=visual_crossing_api_key
