--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5"
-  }
+  },
+  "packageManager": "pnpm@10.14.0"
 }
