--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: 10
+          run_install: false
 
       - name: Use Node.js 24
         uses: actions/setup-node@v4
@@ -29,7 +29,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: corepack enable && pnpm install --frozen-lockfile
 
       - name: Run ESLint
         run: pnpm lint
