--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "noEmit": true,
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": ["vite/client", "node"]
   },
   "include": ["src", "vite.config.ts"]
 }
