--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:v": "vercel dev & open http://localhost:3000",
+    "dev:v": "vercel dev --listen 3000",
     "build": "tsc -b && vite build",
     "clean": "rm -rf dist/",
     "lint": "eslint .",
