feat: add parse_cities.py script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:v": "vercel dev --listen 3000",
     "build": "tsc -b && vite build",
     "clean": "rm -rf dist/",
-    "fetch_cities": "python3 scripts/fetch_cities.py",
+    "cities:all": "pnpm cities:fetch && pnpm cities:parse",
+    "cities:fetch": "python3 scripts/fetch_cities.py",
+    "cities:parse": "python3 scripts/parse_cities.py",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --write",
